<resources>
    <string name="app_name">mhlim_search</string>
    <string name="str_naver_client_id">PGdGCxgfeZfnp1Tm9AxY</string>
    <string name="str_naver_client_secret">kghuK9MP7w</string>
    <string name="str_search">검색</string>
    <string name="str_recent_search">최근 검색</string>
    <string name="str_recent_search_history">최근 검색 이력</string>
    <string name="str_recent_search_history_none">최근 검색 이력이 없습니다.</string>
    <string name="str_search_result_none">검색 결과가 없습니다.</string>
    <string name="str_data_load_error">데이터를 로드할 수 없습니다.</string>
    <string name="str_re_start">다시 시도</string>
    <string name="str_data_load_fail">데이터 로드 실패</string>
    <string name="str_write_search_word">검색어를 입력해주세요.</string>
    <string name="str_back_press">\'뒤로\'버튼을 한번 더 누르시면 종료됩니다.</string>
</resources>